--- a/next-drawio-core/package.json
+++ b/next-drawio-core/package.json
@@ -24,11 +24,8 @@
     "clean": "rm -rf dist",
     "prebuild": "pnpm run clean"
   },
-  "dependencies": {
-    "fabric": "^5.5.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/fabric": "^5.3.10",
     "@types/node": "^20",
     "typescript": "^5"
   },
@@ -44,8 +41,7 @@
     "drawio",
     "canvas",
     "diagram",
-    "graphics",
-    "fabric"
+    "graphics"
   ],
   "author": "Your Name",
   "license": "MIT",
